# key_value_client_server

./: CMakeLists.txt  README.md  build.sh  clean.sh
.github/workflows/: cmake.yml
client/: CMakeLists.txt
client/client_app/: CMakeLists.txt  main.c  request_handler.c  request_handler.h
client/client_lib/: CMakeLists.txt  kvm_client.c  kvm_client_internal.h
client/client_transport_lib/: CMakeLists.txt  kvm_client_transport.c  kvm_client_transport_internal.h
client/include/: kvm_client.h  kvm_client_transport.h
common/include/: kvm_replies.h  kvm_requests.h  kvm_results.h  kvm_utils.h
common/test/gtest/: CMakeLists.txt  client.cc  client_transport_mock.cc  constants.cc  server.cc  server_ut.c
common/utils/: CMakeLists.txt  kvm_utils.c
server/: CMakeLists.txt
server/daemon/: CMakeLists.txt  daemon.c
server/deamon/: CMakeLists.txt
server/include/: kvm_request_handler.h  kvm_server.h
server/request_handler_lib/: CMakeLists.txt  kvm_request_handler.c
server/server_lib/: CMakeLists.txt  kvm_request_handler.c  kvm_server.c  kvm_server_internal.h
test/gtest/: CMakeLists.txt
