CMAKE_MINIMUM_REQUIRED(VERSION 3.18)

SET(CMAKE_C_COMPILER "gcc")
SET(CMAKE_CXX_COMPILER "g++")

PROJECT("kvm")

INCLUDE_DIRECTORIES(common/include)
INCLUDE_DIRECTORIES(external/apr/include/apr-1)

LINK_DIRECTORIES(external/apr/lib)

ADD_SUBDIRECTORY(common/utils)
ADD_SUBDIRECTORY(client)
ADD_SUBDIRECTORY(server)
#ADD_SUBDIRECTORY(common/test/gtest)